# APA

./: APA.c  APA.h  CMakeLists.txt  decrypt.c  encrypt.c  main.c  main.cpp  utils.cpp  utils.h
lab1/: add_and_sub.c  cycle_add_and_sub.c
lab2/: cycle_mul_and_div.c  mul_and_div.c
lab3/: cycle_pow_mod.c  pow_mod.c
lab4/: decrypt.c  encrypt.c
